Remove of comments
I removed the comment due that I found out that error for publishing is due to the constructor site method.

--- a/index.HTML
+++ b/index.HTML
@@ -28,10 +28,10 @@
         </script>
     </div>
 
-    <!--
+    
     <p>Tell us about <span>your</span> course?</p>
     <form name="Feedback"><!--Formulario.-->
-        <div><!--Dropdown menu.--''>
+        <div><!--Dropdown menu.-->
             <select id="courses" onchange="ChoiceMade(this.value)">
                 <option value="Null">--Choose--</option>
                 <option value="Angular">Angular</option>
@@ -42,15 +42,15 @@
             </select>
         </div>
         <div id="Favorites">
-            <div><!--Favorite instructor-'->
+            <div><!--Favorite instructor-->
                 <label class="standoutLabel">Enter your favorite instructor:</label>
                 <input type="text" id="InstructorName" required minlength="4">
             </div>
-            <div><!--Favourite course-'->
+            <div><!--Favourite course-->
                 <label class="standoutLabel">Enter your favorite course:</label>
                 <input type="text" id="CourseName" required maxlength="6" pattern="[A-Za-z]{1,}[+]{0-2}">
             </div>
-            <div><!--Radio button.-'->
+            <div><!--Radio button.-->
                 <label>Did you like the course?</label>
             </div>
             <div id="Likes" aria-required="false">
@@ -68,7 +68,6 @@
             <button class="green_btn" onclick="Validate();">Send</button>
         </div>
     </form>
--->
 
     <table><!--Esto es para insertar una tabla.-->
         <tr>
